# Task_4

./: CMakeLists.txt  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main.cpp  main_8cpp.html  main_8cpp__incl.map
.github/workflows/: doc.yml
docDir/html/: globals_func.html  main_8cpp.html  main_8cpp__incl.md5
docDir/html/search/: all_1.js  all_2.js  functions_1.js  pages_0.js  searchdata.js
search/: all_1.js  all_2.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js
